# stripe

./: .cursorrules  .env.example  .env.example.stripe  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/modes/: payments-platform.yaml
.metagross/: instruction-1762629709958.md  instruction-1762630628557.md  instruction-1762631712564.md  instruction-1762632035515.md  instruction-1762632054008.md  instruction-1762632075661.md  instruction-1762632137820.md  instruction-1762632201249.md  instruction-1762632244368.md  instruction-1762632312372.md  instruction-1762632340892.md  instruction-1762632374836.md  instruction-1762632560258.md  instruction-1762632630299.md  instruction-1762632656103.md  instruction-1762632714375.md  instruction-1762632743802.md  instruction-1762632815516.md  instruction-1762632830612.md  instruction-1762632889527.md  instruction-1762632903513.md  instruction-1762632936244.md  instruction-1762632982121.md  instruction-1762633024426.md  instruction-1762633041484.md  instruction-1762633064809.md  instruction-1762633094673.md  instruction-1762633138450.md  instruction-1762633223906.md  instruction-1762633278793.md  instruction-1762633332498.md  instruction-1762667167273.md  instruction-1762667368442.md  instruction-1762667898420.md  instruction-1762668040852.md  instruction-1762668404807.md  instruction-1762669050599.md  instruction-1762669890010.md  instruction-1762670240265.md  instruction-1762672517942.md  (+48 more)
alembic/: README  env.py  script.py.mako
alembic/versions/: 0dddffc913cc_initial_schema.py  861451887c15_initial_schema.py
docs/: PERFORMANCE_TESTING.md  PROJECT_STATUS.md  README.md  SETUP.md  SPEC_COMPLIANCE.md  STRIPE_SECURITY_NOTIFICATION.md  STRIPE_TEST_MODE_SETUP.md  TESTING.md  api_reference.md  architecture.md  integration_guide.md  operations.md
docs/context/: memory.md
src/billing_service/: __init__.py  admin.py  auth.py  cache.py  checkout_api.py  config.py  database.py  entitlements.py  entitlements_api.py  event_processors.py  main.py  metrics.py  models.py  payments.py  portal_api.py  prometheus_metrics.py  reconciliation.py  scheduler.py  schemas.py  stripe_service.py  webhook_processors.py  webhook_verification.py  webhooks.py
tests/: README_STRIPE_INTEGRATION.md  __init__.py  conftest.py  conftest_stripe.py  test_admin.py  test_admin_auth.py  test_api.py  test_auth.py  test_cache.py  test_entitlements.py  test_entitlements_api_edge_cases.py  test_entitlements_edge_cases.py  test_event_processors.py  test_event_processors_additional.py  test_event_processors_coverage.py  test_event_processors_error_paths.py  test_event_processors_implementation.py  test_health.py  test_helpers.py  test_manual_revoke.py  test_metrics.py  test_payments.py  test_performance.py  test_reconciliation.py  test_scheduler.py  test_stripe_integration.py  test_stripe_service.py  test_webhook_processors.py  test_webhook_verification.py  test_webhooks.py  test_webhooks_coverage.py
